# superneurons-release

./: CMakeLists.txt  config.linux  config.osx  readme.md
cmake/: arch_detect.cu  config.cmake  cuda.cmake  glog.cmake  jpeg.cmake
include/: comm_engine.h  cublas_alias.h  gpu_malloc.h  initializer.h  liveness.h  mem_control.h  network.h  recompute.h  registry.h  solver.h  stream_singleton.h  superneurons.h  switch.h  tensor.h
include/layer/: base_layer.h  base_network_layer.h  base_structure_layer.h  batch_normalization_layer.h  concat_layer.h  cudnn_activation_layer.h  cudnn_convolution_layer.h  cudnn_pooling_layer.h  data_layer.h  dropout_layer.h  fork_layer.h  fully_connected_layer.h  join_layer.h  local_response_norm_layer.h  padding_layer.h  softmax_layer.h
include/util/: base_reader.h  binary_dumper.h  chainer.h  common.h  error_util.h  image_reader.h  lru.h  mem_util.h  parallel_reader.h  preprocess.h  print_util.h  saver.h  superneurons_math.h  tensor_queue.h  thread_routine.h
scripts/: config.linux  install-deps.sh  new_test.sh  testbench.sh
src/: CMakeLists.txt  comm_engine.cpp  gpu_malloc.cpp  initializer.cpp  liveness.cpp  mem_control.cpp  network.cpp  recompute.cpp  registry.cpp  solver.cpp  solver.cu  stream_singleton.cpp  tensor.cpp  tensor.cu
src/layer/: base_layer.cpp  base_network_layer.cpp  base_structure_layer.cpp  batch_normalization_layer.cpp  concat_layer.cpp  cudnn_activation_layer.cpp  cudnn_convolution_layer.cpp  cudnn_pooling_layer.cpp  data_layer.cpp  dropout_layer.cpp  fork_layer.cpp  fully_connected_layer.cpp  join_layer.cpp  local_response_norm_layer.cpp  padding_layer.cpp  padding_layer.cu  softmax_layer.cpp  softmax_layer.cu
src/util/: base_reader.cpp  binary_dumper.cpp  chainer.cpp  image_reader.cpp  lru.cpp  parallel_reader.cpp  preprocess.cpp  saver.cpp  tensor_queue.cpp
testing/: CMakeLists.txt  alexnet.cpp  alexnet_debug.cpp  alexnet_tf.cpp  blasx_test.cpp  cifar.cpp  cifar10.cpp  cifar10_bn.cpp  concat_test.cpp  cuda_err_test.cpp  data_test.cpp  datareader_test.cpp  fork_join_test.cpp  forkfork.cpp  inception_v4.cpp  lenet.cpp  padding_test.cpp  residual_32.cpp  residual_32_nobn.cpp  residual_32_torch.cpp  residual_imagenet.cpp  residual_imagenet_101.cpp  residual_imagenet_1024.cpp  residual_imagenet_152.cpp  residual_imagenet_256.cpp  residual_imagenet_50.cpp  residual_imagenet_512.cpp  residual_imagenet_max.cpp  saver_test.cpp  solver_test.cpp  tensor_test.cpp  test_lru.cpp  test_malloc_free_speed.cpp  vgg16.cpp  vgg19.cpp
testing/unittest/: CMakeLists.txt  basic_test.cpp  compute_image_mean_test.cpp  data_transformer_test.cpp  label_bin_test.cpp  mempool_test.cpp  preprocess_test.cpp  second_test.cpp  tensor_test.cpp  testing.h  unittest.cpp
tools/: CMakeLists.txt  compute_image_mean.cpp  convert_cifar10.cpp  convert_cifar100.cpp  convert_jpeg.cpp  convert_mnist.cpp
tools/buid_imgnet/: binary.py  convert.py  mean.py  test.py
tools/export_caffe/: initializers.py  layers.py  main.py  solvers.py  utils.py
tools/img_val/: main.py
